fix: rename role to roles in delete
